--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,7 +4,7 @@
 			<h1><%= form_title %></h1>
 			<%= form_for @product do |f| %>
 				<div class="form-group">
-					<%= f.text_field :name, class: "form-control input-lg", placeholder: "El nombre del producto" %>
+					<%= f.text_field :name, class: "form-control input-lg", placeholder: "Ingresa el nombre del producto" %>
 				</div>
 				<div class="form-group">
 					<%= f.url_field :url, class: "form-control input-lg", placeholder: "Ingresa la URL del producto" %>
