--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,12 @@
         <%= flash[:notice] %>
       </div>
     <% end %>
+
+    <% if signed_in? %>
+      <div>
+        Hola <%= current_user.name %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
