Implementea la funcionalidad de salida

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
     <% if signed_in? %>
       <div>
-        Hola <%= current_user.name %>
+        Hola <%= current_user.name %> <%= link_to "Salir", logout_path, method: :delete %>
       </div>
     <% end %>
     <%= yield %>
