--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,16 @@
-
 <div class="container">
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
-
       <div class="products">
         <% @products.each do |product| %>
         <div class="product clearfix">
           <div class="product-details">
             <span class="product-title"><%= link_to product.name, product %></span>
             <span class="product-description"><%= product.description %></span>
+          </div>
+          <div class="product-comments">
+            <span class="glyphicon glyphicon-comment"></span>
+            <span class="comment-count"><%= product.comments.count %></span>
           </div>
         </div>
         <% end %>
